# algorint

./: .gitignore  README.md  render.yaml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  models.py
backend/app/routers/: __init__.py  code_execution.py  exercises.py  lessons.py  modules.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  DifficultyBadge.tsx  ProgressBar.tsx  StatusIndicator.tsx  index.ts
frontend/src/context/: ProgressContext.tsx
frontend/src/pages/: CareerTipsPage.tsx  ExercisePage.tsx  HomePage.tsx  InterviewModePage.tsx  LessonPage.tsx  ModuleDetailPage.tsx  ModulesPage.tsx  PatternCheatSheetPage.tsx  PracticePage.tsx  ProgressPage.tsx  RoadmapPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: spacedRepetition.ts
